# live_stream_app

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
