[package]
name = "live_stream_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
#handlebars = { version = "4.3.3", features = ["dir_source"] }
#serde = { version = "1.0.144", features = ["derive"] }
#serde_json = "1.0.85"
